播放器功能改动

--- a/1.html
+++ b/1.html
@@ -43,6 +43,12 @@
 <div class="div_player_time"></div>
 <img src="images/laba.png" id="img_laba">
 <div class="div_paused" style="display:none;">继续收听></div>
+<div class="div_control_voice" style="display:none;">
+  <img src="images/laba.png" id="img_laba_1">
+  <div class="div_voice_border" ></div>
+</div>
+  
+
 
 
 
