添加控制音量功能

--- a/1.html
+++ b/1.html
@@ -9,7 +9,16 @@
 <body>
 <div id="divtop_title">
   <div class="divtop_span">
-  <div class="divtop_span_1"><span class="span_title_1">Do not bow ▼</span></div>
+  <div class="divtop_span_1"><span class="span_title_1">Do not bow ▼ |</span>
+<ul class="ul_span_1">
+  <li class="li_span_1">设置</li>
+  <li class="li_span_1">付费服务</li>
+  <li class="li_span_1">赠送PRO</li>
+  <li class="li_span_1">退出</li>
+</ul>
+
+
+  </div>
   <ul class="ul_title">
     <li class="li_title">累计听收0首</li>
     <li class="li_title">红心</li>
@@ -41,11 +50,15 @@
   <div class="div_move" style="width:0%;"></div>
 </div>
 <div class="div_player_time"></div>
-<img src="images/laba.png" id="img_laba">
+<div class="div_img_laba"><img src="images/laba.png" id="img_laba"></div>
 <div class="div_paused" style="display:none;">继续收听></div>
-<div class="div_control_voice" style="display:none;">
+<div class="div_control_voice" >
   <img src="images/laba.png" id="img_laba_1">
-  <div class="div_voice_border" ></div>
+  <div class="div_voice_border">
+    <div class="div_voice_process" style="width:0%;">
+      <div class="div_voice_move" draggable="true"></div>
+    </div>
+  </div>
 </div>
   
 
