--- a/1.html
+++ b/1.html
@@ -38,7 +38,17 @@
 </ul>
   <span class="span_wenzi_1">最近收听</span><div class="span_border_1"></div>
   <span class="span_wenzi_2">试试这些</span><div class="span_border_2"></div>
-
+<ul class="ul_middle_1">
+  <li class="li_middle_1"><span class="span_list">南山南 系 MHz</span></li>
+  <li class="li_middle_1"><span class="span_list">Set Fire to the Rain 系 MHz</span></li>
+  <li class="li_middle_1"><span class="span_list">Try 系 MHz</span></li>
+  <li class="li_middle_1"><span class="span_list">原谅 系 MHz</span></li>
+  <li class="li_middle_1"><span class="span_list">Young and Beautiful 系 MHz</span></li>
+</ul>
+ <span class="span_wenzi_3">品牌兆赫</span><div class="span_border_3"></div>
+ <ul class="ul_middle_2">
+<li class="li_middle_2"><span class="span_list">SK-|| 最初的梦 MHz</span></li>
+</ul>
 </div>
   
 </div> 
@@ -50,9 +60,11 @@
   <div class="div_move" style="width:0%;"></div>
 </div>
 <div class="div_player_time"></div>
-<div class="div_img_laba"><img src="images/laba.png" id="img_laba"></div>
+
+<div class="div_img_laba">
+<img src="images/laba.png" id="img_laba"></div>
 <div class="div_paused" style="display:none;">继续收听></div>
-<div class="div_control_voice" >
+<div class="div_control_voice" style="display:none;images/">
   <img src="images/laba.png" id="img_laba_1">
   <div class="div_voice_border">
     <div class="div_voice_process" style="width:0%;">
@@ -60,14 +72,16 @@
     </div>
   </div>
 </div>
+<img src="images/xin.png" id="img_xin">
+<img src="images/shanchu.png" id="img_shanchu">
+<img src="images/jiantou.png" id="img_jiantou">
   
 
 
 
 
-
 </div>
-<audio src="bujiangjiu.mp3" controls id="audio_player"></audio>
+<audio src="bujiangjiu.mp3" id="audio_player"></audio>
 
 
 
