代码格式修改

--- a/1.html
+++ b/1.html
@@ -1,89 +1,91 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>豆瓣FM</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="1.css">
-  <script type="text/javascript" defer src = "1.js"></script>
+    <title>豆瓣FM</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="1.css">
+    <script type="text/javascript" defer src="1.js"></script>
 </head>
+
 <body>
-<div id="divtop_title">
-  <div class="divtop_span">
-  <div class="divtop_span_1"><span class="span_title_1">Do not bow ▼ |</span>
-<ul class="ul_span_1">
-  <li class="li_span_1">设置</li>
-  <li class="li_span_1">付费服务</li>
-  <li class="li_span_1">赠送PRO</li>
-  <li class="li_span_1">退出</li>
-</ul>
-
-
-  </div>
-  <ul class="ul_title">
-    <li class="li_title">累计听收0首</li>
-    <li class="li_title">红心</li>
-    <li class="li_title">收藏兆赫</li>
-  </ul>
-   <span class="span_title_2">|升级到</span><span class="span_title_3">PRO</span>
-  <img src="images/douban.png" id="img_douban">
-  </div>
-</div> 
-<div id="div_middle">
-<div class="div_middle_ul">
-<ul class="ul_middle">
-<li class="li_middle"><span class="span_list">我的私人兆赫</span></li>
- <li class="li_middle"><span class="span_list">我的红心兆赫</span></li>
- <li class="li_middle"><span class="span_list">每日私人歌单</span></li>
- <li class="li_middle"><span class="span_list">豆瓣精选兆赫</span></li> 
-</ul>
-  <span class="span_wenzi_1">最近收听</span><div class="span_border_1"></div>
-  <span class="span_wenzi_2">试试这些</span><div class="span_border_2"></div>
-<ul class="ul_middle_1">
-  <li class="li_middle_1"><span class="span_list">南山南 系 MHz</span></li>
-  <li class="li_middle_1"><span class="span_list">Set Fire to the Rain 系 MHz</span></li>
-  <li class="li_middle_1"><span class="span_list">Try 系 MHz</span></li>
-  <li class="li_middle_1"><span class="span_list">原谅 系 MHz</span></li>
-  <li class="li_middle_1"><span class="span_list">Young and Beautiful 系 MHz</span></li>
-</ul>
- <span class="span_wenzi_3">品牌兆赫</span><div class="span_border_3"></div>
- <ul class="ul_middle_2">
-<li class="li_middle_2"><span class="span_list">SK-|| 最初的梦 MHz</span></li>
-</ul>
-</div>
-  
-</div> 
-<div id="div_player">
-<img src="images/yinyue.png">
-<img src="images/play.jpg" id="img_play">
-<div class="div_player_text"><span class="span_player_1">Kevin Kern</span><br><span class="span_player_2">‹In the Enchanted Garden› 1993</span><br><br><span class="span_player_3">After The Rain</span></div>
-<div class="div_process">
-  <div class="div_move" style="width:0%;"></div>
-</div>
-<div class="div_player_time"></div>
-
-<div class="div_img_laba">
-<img src="images/laba.png" id="img_laba"></div>
-<div class="div_paused" style="display:none;">继续收听></div>
-<div class="div_control_voice" style="display:none;images/">
-  <img src="images/laba.png" id="img_laba_1">
-  <div class="div_voice_border">
-    <div class="div_voice_process" style="width:0%;">
-      <div class="div_voice_move" draggable="true"></div>
+    <div id="divtop_title">
+        <div class="divtop_span">
+            <div class="divtop_span_1"><span class="span_title_1">Do not bow ▼ |</span>
+                <ul class="ul_span_1">
+                    <li class="li_span_1">设置</li>
+                    <li class="li_span_1">付费服务</li>
+                    <li class="li_span_1">赠送PRO</li>
+                    <li class="li_span_1">退出</li>
+                </ul>
+            </div>
+            <ul class="ul_title">
+                <li class="li_title">累计听收0首</li>
+                <li class="li_title">红心</li>
+                <li class="li_title">收藏兆赫</li>
+            </ul>
+            <span class="span_title_2">|升级到</span><span class="span_title_3">PRO</span>
+            <img src="images/douban.png" id="img_douban">
+        </div>
     </div>
-  </div>
-</div>
-<img src="images/xin.png" id="img_xin">
-<img src="images/shanchu.png" id="img_shanchu">
-<img src="images/jiantou.png" id="img_jiantou">
-  
-
-
-
-
-</div>
-<audio src="bujiangjiu.mp3" id="audio_player"></audio>
-
-
-
+    <div id="div_middle">
+        <div class="div_middle_ul">
+            <ul class="ul_middle">
+                <li class="li_middle"><span class="span_list">我的私人兆赫</span></li>
+                <li class="li_middle"><span class="span_list ">我的红心兆赫</span></li>
+                <li class="li_middle span_list_1"><span class="span_list">每日私人歌单</span></li>
+                <li class="li_middle span_list_2"><span class="span_list">豆瓣精选兆赫</span></li>
+            </ul>
+            <span class="span_wenzi_1">最近收听</span>
+            <div class="span_border_1"></div>
+            <span class="span_wenzi_2">试试这些</span>
+            <div class="span_border_2"></div>
+            <ul class="ul_middle_1">
+                <li class="li_middle_1"><span class="span_list">南山南 系 MHz</span></li>
+                <li class="li_middle_1"><span class="span_list">Set Fire to the Rain 系 MHz</span></li>
+                <li class="li_middle_1"><span class="span_list">Try 系 MHz</span></li>
+                <li class="li_middle_1"><span class="span_list">原谅 系 MHz</span></li>
+                <li class="li_middle_1"><span class="span_list">Young and Beautiful 系 MHz</span></li>
+            </ul>
+            <span class="span_wenzi_3">品牌兆赫</span>
+            <div class="span_border_3"></div>
+            <ul class="ul_middle_2">
+                <li class="li_middle_2"><span class="span_list">SK-|| 最初的梦 MHz</span></li>
+            </ul>
+        </div>
+    </div>
+    <div id="div_player">
+        <img src="images/yinyue.png">
+        <img src="images/play.jpg" id="img_play">
+        <div class="div_player_text"><span class="span_player_1">Kevin Kern</span>
+            <br><span class="span_player_2">‹In the Enchanted Garden› 1993</span>
+            <br>
+            <br><span class="span_player_3">After The Rain</span></div>
+        <div class="div_process">
+            <div class="div_move" style="width:0%;"></div>
+        </div>
+        <div class="div_player_time"></div>
+        <div class="div_img_laba">
+            <img src="images/laba.png" id="img_laba"></div>
+        <div class="div_paused" style="display:none;">继续收听></div>
+        <div class="div_control_voice" style="display: none;">
+            <img src="images/laba.png" id="img_laba_1">
+            <div class="div_voice_border">
+                <div class="div_voice_process" style="width:0%;">
+                    <div class="div_voice_move" draggable="true"></div>
+                </div>
+            </div>
+        </div>
+        <img src="images/xin.png" id="img_xin">
+        <img src="images/shanchu.png" id="img_shanchu">
+        <img src="images/jiantou.png" id="img_jiantou">
+        <img src="images/fasong.png" id="img_fasong">
+        <div class="div_listen">♬听相似歌曲</div>
+        <div id="div_music">
+            <div class="div_enjoymusic">分享这首歌</div>
+        </div>
+    </div>
+    <audio src="bujiangjiu.mp3" id="audio_player"></audio>
 </body>
+
 </html>
