--- a/1.html
+++ b/1.html
@@ -81,11 +81,26 @@
         <img src="images/jiantou.png" id="img_jiantou">
         <img src="images/fasong.png" id="img_fasong">
         <div class="div_listen">♬听相似歌曲</div>
-        <div id="div_music">
+        <div class="div_enjoy">分享这首歌</div>
+        <div id="div_music" style="display:none;">
             <div class="div_enjoymusic">分享这首歌</div>
+            <img src="images/dou.png" id="img_dou">
+            <img src="images/wei.png" id="img_wei">
+            <img src="images/weixin.png" id="img_weixin">
+            <img src="images/qq.png" id="img_qq">
+            <img src="images/weibo.png" id="img_weibo">
+            <img src="images/renren.png" id="img_renren">
         </div>
     </div>
     <audio src="bujiangjiu.mp3" id="audio_player"></audio>
+    <div id="div_bottom">
+    <img src="images/xiazai.png" id="img_xiazai">
+    <div class="div_bottom_text">
+      <span class="span_bottom_1">© 2016 douban <span class="span_bottom_2">京ICP备11027288号</span> 网络视听许可证0110418号 京公网安备110105012274</span> <span class="span_bottom_3">广告合作: adfm@douban.com | FM游乐场 | FM用户手册 |</span><span class="span_bottom_4">豆瓣FM中心</span> 
+    </div>
+    <img src="images/guanggao.png" id="img_guanggao">
+      
+    </div>
 </body>
 
 </html>
