--- a/1.html
+++ b/1.html
@@ -5,7 +5,9 @@
     <title>豆瓣FM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="1.css">
+    <link rel="stylesheet" type="text/css" href="2.css">
     <script type="text/javascript" defer src="1.js"></script>
+    <script type="text/javascript" defer src="2.js"></script>
 </head>
 
 <body>
@@ -31,8 +33,8 @@
     <div id="div_middle">
         <div class="div_middle_ul">
             <ul class="ul_middle">
-                <li class="li_middle"><span class="span_list">我的私人兆赫</span></li>
-                <li class="li_middle"><span class="span_list ">我的红心兆赫</span></li>
+                <li class="li_middle li_middle_1"><span class="span_list">我的私人兆赫</span></li>
+                <li class="li_middle li_middle_1"><span class="span_list ">我的红心兆赫</span></li>
                 <li class="li_middle span_list_1"><span class="span_list">每日私人歌单</span></li>
                 <li class="li_middle span_list_2"><span class="span_list">豆瓣精选兆赫</span></li>
             </ul>
@@ -50,7 +52,7 @@
             <span class="span_wenzi_3">品牌兆赫</span>
             <div class="span_border_3"></div>
             <ul class="ul_middle_2">
-                <li class="li_middle_2"><span class="span_list">SK-|| 最初的梦 MHz</span></li>
+                <li class="li_middle_2 li_middle_1"><span class="span_list">SK-|| 最初的梦 MHz</span></li>
             </ul>
         </div>
     </div>
@@ -94,13 +96,17 @@
     </div>
     <audio src="bujiangjiu.mp3" id="audio_player"></audio>
     <div id="div_bottom">
-    <img src="images/xiazai.png" id="img_xiazai">
-    <div class="div_bottom_text">
-      <span class="span_bottom_1">© 2016 douban <span class="span_bottom_2">京ICP备11027288号</span> 网络视听许可证0110418号 京公网安备110105012274</span> <span class="span_bottom_3">广告合作: adfm@douban.com | FM游乐场 | FM用户手册 |</span><span class="span_bottom_4">豆瓣FM中心</span> 
+        <img src="images/xiazai.png" id="img_xiazai">
+        <div class="div_bottom_text">
+            <span class="span_bottom_1">© 2016 douban <span class="span_bottom_2">京ICP备11027288号</span> 网络视听许可证0110418号 京公网安备110105012274</span> <span class="span_bottom_3">广告合作: adfm@douban.com | FM游乐场 | FM用户手册 |</span><span class="span_bottom_4">豆瓣FM中心</span>
+        </div>
+        <img src="images/guanggao.png" id="img_guanggao">
     </div>
-    <img src="images/guanggao.png" id="img_guanggao">
-      
-    </div>
+<div id="div_left_body">
+  
+</div>
+
+
 </body>
 
 </html>
