滑动div标题完成

--- a/1.html
+++ b/1.html
@@ -103,9 +103,22 @@
         <img src="images/guanggao.png" id="img_guanggao">
     </div>
 <div id="div_left_body">
+<div id="div_left_top">
+  <span class="span_left_title">全部兆赫</span>
+  <div class="div_input_border">
+  <input type="text" id="input_text" placeholder="搜索兆赫">
+  <img src="images/jingzi.png" id="img_jingzi">
+  </div>
+</div>
+<div id="div_left_middle">
+<img src="images/tu1.jpg">
+<div class="div_left_picture">
   
 </div>
-
+  
+</div>
+</div>
+<div id="div_controlline"></div>
 
 </body>
 
