添加列表标题

--- a/1.html
+++ b/1.html
@@ -113,7 +113,19 @@
 <div id="div_left_middle">
 <img src="images/tu1.jpg">
 <div class="div_left_picture">
+  <ul class="ul_left_nummber">
+    <li class="li_left_nummber">1</li>
+    <li class="li_left_nummber">2</li>
+    <li class="li_left_nummber">3</li>
+    <li class="li_left_nummber">4</li>
+    <li class="li_left_nummber">5</li>
+    <li class="li_left_nummber">6</li>
+  </ul>
+  <div class="div_left_text">
   
+    
+  </div>
+
 </div>
   
 </div>
