--- a/1.html
+++ b/1.html
@@ -111,7 +111,7 @@
   </div>
 </div>
 <div id="div_left_middle">
-<img src="images/tu1.jpg">
+<img src="images/tu1.jpg" style="width:290px;height:276px;" id="img_tupian">
 <div class="div_left_picture">
   <ul class="ul_left_nummber">
     <li class="li_left_nummber">1</li>
@@ -122,7 +122,9 @@
     <li class="li_left_nummber">6</li>
   </ul>
   <div class="div_left_text">
-  
+  <div class="left_text_1">舒缓MHz</div>
+  <div class="left_text_2">心情舒缓的时候听什么</div>
+  <div class="left_text_3">热门歌曲：You're Beautiful / You Are My Sunshine / Scream & Shout (Feat. Britney Spears)<br>兆赫详情</div>
     
   </div>
 
