添加自动切换

--- a/1.html
+++ b/1.html
@@ -102,38 +102,35 @@
         </div>
         <img src="images/guanggao.png" id="img_guanggao">
     </div>
-<div id="div_left_body">
-<div id="div_left_top">
-  <span class="span_left_title">全部兆赫</span>
-  <div class="div_input_border">
-  <input type="text" id="input_text" placeholder="搜索兆赫">
-  <img src="images/jingzi.png" id="img_jingzi">
-  </div>
-</div>
-<div id="div_left_middle">
-<img src="images/tu1.jpg" style="width:290px;height:276px;" id="img_tupian">
-<div class="div_left_picture">
-  <ul class="ul_left_nummber">
-    <li class="li_left_nummber">1</li>
-    <li class="li_left_nummber">2</li>
-    <li class="li_left_nummber">3</li>
-    <li class="li_left_nummber">4</li>
-    <li class="li_left_nummber">5</li>
-    <li class="li_left_nummber">6</li>
-  </ul>
-  <div class="div_left_text">
-  <div class="left_text_1">舒缓MHz</div>
-  <div class="left_text_2">心情舒缓的时候听什么</div>
-  <div class="left_text_3">热门歌曲：You're Beautiful / You Are My Sunshine / Scream & Shout (Feat. Britney Spears)<br>兆赫详情</div>
-    
-  </div>
-
-</div>
-  
-</div>
-</div>
-<div id="div_controlline"></div>
-
+    <div id="div_left_body">
+        <div id="div_left_top">
+            <span class="span_left_title">全部兆赫</span>
+            <div class="div_input_border">
+                <input type="text" id="input_text" placeholder="搜索兆赫">
+                <img src="images/jingzi.png" id="img_jingzi">
+            </div>
+        </div>
+        <div id="div_left_middle">
+            <img src="images/tu1.jpg" style="width:290px;height:276px;" id="img_tupian">
+            <div class="div_left_picture">
+                <ul class="ul_left_nummber">
+                    <li class="li_left_nummber li_left_nummber_1">1</li>
+                    <li class="li_left_nummber li_left_nummber_2">2</li>
+                    <li class="li_left_nummber li_left_nummber_3">3</li>
+                    <li class="li_left_nummber li_left_nummber_4">4</li>
+                    <li class="li_left_nummber li_left_nummber_5">5</li>
+                    <li class="li_left_nummber li_left_nummber_6">6</li>
+                </ul>
+                <div class="div_left_text">
+                    <div class="left_text_1">舒缓MHz</div>
+                    <div class="left_text_2">心情舒缓的时候听什么</div>
+                    <div class="left_text_3">热门歌曲：You're Beautiful / You Are My Sunshine / Scream & Shout (Feat. Britney Spears)
+                        <br>兆赫详情</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="div_controlline"></div>
 </body>
 
 </html>
