添加图片列表

--- a/1.html
+++ b/1.html
@@ -129,6 +129,87 @@
                 </div>
             </div>
         </div>
+        <ul class="ul_musictype">
+          <li class="li_musictype">摇滚</li>
+          <li class="li_musictype">古典</li>
+          <li class="li_musictype">爵士</li>
+          <li class="li_musictype li_musictype_1">民谣/乡村</li>
+          <li class="li_musictype">流行</li>
+          <li class="li_musictype">电子</li>
+          <li class="li_musictype li_musictype_2">原声配乐</li>
+          <li class="li_musictype li_musictype_3">轻音乐</li>
+          <li class="li_musictype">说唱</li>
+          <li class="li_musictype">雷鬼</li>
+          <li class="li_musictype">拉丁</li>
+          <li class="li_musictype li_musictype_2">世界音乐</li>
+          <li class="li_musictype li_musictype_3">布鲁斯</li>
+          <li class="li_musictype li_musictype_4">放克/灵歌/R&B</li>
+        </ul>
+        <div id="div_left_bottom">
+        <div class="bottom_title_1">热门兆赫</div>
+        <ul class="ul_bottom">
+          <li class="li_bottom">
+            <img src="images/p1.png" style="width:51px;height:51px;">
+            <span class="span_1">华语</span><span class="span_2">MHz</span>
+            <br><span class="span_3">1189首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p2.png" style="width:51px;height:51px;">
+            <span class="span_1">欧美</span><span class="span_2">MHz</span>
+            <br><span class="span_3">3599首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p3.png" style="width:51px;height:51px;">
+            <span class="span_1">八零</span><span class="span_2">MHz</span>
+            <br><span class="span_3">883首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p4.png" style="width:51px;height:51px;">
+            <span class="span_1">工作学习</span><span class="span_2">MHz</span>
+            <br><span class="span_3">兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p5.png" style="width:51px;height:51px;">
+            <span class="span_1">粤语</span><span class="span_2">MHz</span>
+            <br><span class="span_3">2704首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p6.png" style="width:51px;height:51px;">
+            <span class="span_1">轻音乐</span><span class="span_2">MHz</span>
+            <br><span class="span_3">2736首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p7.png" style="width:51px;height:51px;">
+            <span class="span_1">咖啡</span><span class="span_2">MHz</span>
+            <br><span class="span_3">1710首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p8.png" style="width:51px;height:51px;">
+            <span class="span_1">你的歌词我的故事</span><span class="span_2">MHz</span>
+            <br><span class="span_3">588首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p9.png" style="width:51px;height:51px;">
+            <span class="span_1">看书浇花晒太阳</span><span class="span_2">MHz</span>
+            <br><span class="span_3">1228首歌曲 兆赫详情</span>
+          </li>
+          <li class="li_bottom">
+            <img src="images/p10.png" style="width:51px;height:51px;">
+            <span class="span_1">爵士</span><span class="span_2">MHz</span>
+            <br><span class="span_3">4163首歌曲 兆赫详情</span>
+          </li>
+</ul>
+
+<div class="bottom_title_2">上升最快</div>
+
+
+
+        
+          
+
+
+
+        </div>
     </div>
     <div id="div_controlline"></div>
 </body>
