代码格式修改

--- a/1.html
+++ b/1.html
@@ -102,7 +102,7 @@
         </div>
         <img src="images/guanggao.png" id="img_guanggao">
     </div>
-    <div id="div_left_body" >
+    <div id="div_left_body">
         <div id="div_left_top">
             <span class="span_left_title">全部兆赫</span>
             <div class="div_input_border">
@@ -260,23 +260,21 @@
                     <br><span class="span_3">50首歌曲 兆赫详情</span>
                 </li>
             </ul>
-        <div class="div_translate" style="display:none;">
-          <div class="div_translate_top">
-            <span class="span_up_1">简介：</span><span class="span_up_2">每天发现一首好听的歌</span>
-          </div>
-          <div class="div_translate_bottom">
-          <span class="span_down_1">热门歌曲：</span><span class="span_down_2">难念的经/外面的世界/无赖/（原唱：主唱：郑中基）</span>
-          </div>
+            <div class="div_translate" style="display:none;">
+                <div class="div_translate_top">
+                    <span class="span_up_1">简介：</span><span class="span_up_2">每天发现一首好听的歌</span>
+                </div>
+                <div class="div_translate_bottom">
+                    <span class="span_down_1">热门歌曲：</span><span class="span_down_2">难念的经/外面的世界/无赖/（原唱：主唱：郑中基）</span>
+                </div>
+            </div>
         </div>
+        <div id="div_controlline">
+            <div id="div_clickbutton">
+                <</div>
+            </div>
         </div>
-    
-    <div id="div_controlline">
-      <div id="div_clickbutton"><</div>
-    </div>
-
-    </div>
-</script>
- 
+        </script>
 </body>
 
 </html>
