代码格式修改

--- a/1.html
+++ b/1.html
@@ -94,7 +94,7 @@
             <img src="images/renren.png" id="img_renren">
         </div>
     </div>
-    <audio src="bujiangjiu.mp3" id="audio_player"></audio>
+    <audio src="bujiangjiu.mp3" id="audio_player" autoplay></audio>
     <div id="div_bottom">
         <img src="images/xiazai.png" id="img_xiazai">
         <div class="div_bottom_text">
